Fixed bug #35142 (SOAP Client/Server Complex Object Support)